Thu Apr 03 21:36:58 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/query.c:
	- add tds_quote_string function
	* src/odbc/odbc.c:
	- rewritten many similar functions, quoting string if needed

Thu Apr 03 14:43:08 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/Makefile.am src/odbc/unittests/tables.c:
	- add a test for SQLTables

Thu Apr 03 12:35:15 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/ct_diagall.c:
	* src/ctlib/unittests/ct_diagclient.c:
	* src/ctlib/unittests/ct_diagserver.c:
	* include/cspublic.h include/ctpublic.h src/ctlib/ct.c:
	* src/ctlib/unittests/Makefile.am:
	- applied Suhasini Sriramulu ct-lib patch 
	 - ct_diag support

Thu Apr 03 10:58:31 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/dblib.h include/des.h include/md4.h include/sybdb.h:
	* include/tds_sysdep_private.h include/tdsodbc.h:
	* include/tdssrv.h:
	- indent(1)

Thu Apr 03 07:56:32 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: updated function support for SQLForeignKeys

Wed Apr 02 22:57:54 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: applied Peter Deacon patch on SQLColumns

Wed Apr 02 21:48:15 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: small SQLStatistics fix

Wed Apr 02 15:07:02 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* doc/api_status.txt: updated

Wed Apr 02 14:57:44 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c win32/FreeTDS.def:
	- applied Peter Deacon patch
	 - SQLColumnPrivileges
	 - SQLForeignKeys
	 - SQLPrimaryKeys
	 - SQLProcedureColumns
	 - SQLProcedures
	 - SQLStatistics
	 - SQLTablePrivileges
	
Wed Apr 02 11:27:20 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/connectparams.c: removed wrong assert

Wed Apr 02 10:20:12 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: check for odbcss.h
	* freetds.spec.in: